[CI][BAT] igt@.* - skip - Chamelium ports not enabled
Submitted by Lakshmi
Assigned to Default DRI bug account
Link to original bug (#110580)
Description
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6012/fi-cml-u2/igt@kms_cursor_legacy@basic-busy-flip-before-cursor-atomic.html
Test requirement not met in function __real_main1355, file ../tests/kms_cursor_legacy.c:1374:
Test requirement: !(n >= display.n_pipes)
Starting subtest: basic-busy-flip-before-cursor-atomic
Test requirement not met in function find_connected_pipe, file ../tests/kms_cursor_legacy.c:243:
Test requirement: found
No valid outputs found
Last errno: 2, No such file or directory
Subtest basic-busy-flip-before-cursor-atomic: SKIP (0.000s)